fix(tables) nav-table alignment, other fixes from design and QA reviews

--- a/src/sass/_instance_list.scss
+++ b/src/sass/_instance_list.scss
@@ -27,8 +27,11 @@
   }
 
   .instance-content {
+    margin-top: -$spv--large;
     padding-bottom: 0;
-    padding-top: $spv--large;
+    @media screen and (max-width: $breakpoint-large) {
+      margin-top: 0;
+    }
 
     .p-notification--positive,
     .p-notification--negative {
